--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,5 +40,5 @@ jobs:
           application_name: springboot-developer
           environment_name: SpringBootDeveloper-env
           version_label: github-action-${{steps.current-time.outputs.formattedTime}}
-          region: ap-northeast-2
+          region: ap-south-1
           deployment_package: ./build/libs/${{env.artifact}}
