--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -41,6 +41,9 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'com.mysql:mysql-connector-j'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 tasks.named('test') {
     useJUnitPlatform()
